# NuGetCMakePackage

./: .gitattributes  .gitignore  CMakeLists.txt  packages.list.json.in  readme.md
.github/: copilot-instructions.md
.github/workflows/: scenario-tests.yml
documentation/: end-to-end-sequence.md
overlay/microsoft.windowsappsdk.foundation/: microsoft.windowsappsdk.foundation-config.cmake  microsoft.windowsappsdk.foundation.manifest
overlay/microsoft.windowsappsdk.interactiveexperiences/: microsoft.windowsappsdk.interactiveexperiences.manifest
overlay/microsoft.windowsappsdk.ml/Stub/winml/: Runtime.cpp  Runtime.h
overlay/microsoft.windowsappsdk.runtime/: microsoft.windowsappsdk.runtime-config.cmake
scenarios/basic/: .gitignore  Basic.Tests.ps1  CMakeLists.txt  nuget.config
